refactor: delete background

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <title>Goly</title>
   </head>
-  <body id="app" class="bg-light bg-texture dark:bg-dark">
+  <body id="app" class="bg-dark">
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
