feature: add meta tags

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       rel="stylesheet"
     />
     <title>Goly</title>
+    <meta name="description" content="URL shortener web app where you can create, delete and view your URLs" />
+    <meta property="og:url" content="https://goly.vercel.app" />
   </head>
   <body id="app" class="bg-dark">
     <script type="module" src="/src/main.ts"></script>
